# lute_data_agent_plus

./: .env.example  .gitignore  404.html  AGENTS.md  CHANGELOG.md  LICENSE  README.md  RELEASE_NOTES.md  docker-compose.yml  index.html
00-项目前瞻/backend/: pyproject.toml  requirements.txt
00-项目前瞻/backend/config/: indicator_tree.yaml
00-项目前瞻/backend/src/: main.py
00-项目前瞻/backend/tests/: test_parser.py
backend/: Dockerfile  pyproject.toml  requirements.txt
backend/config/: indicator_tree.yaml
backend/src/: main.py
backend/src/algorithm/: __init__.py  contribution.py  cross_dimension.py  engine.py  entropy.py
backend/src/api/: algorithm.py  export.py  session.py  upload.py
backend/src/auth/: __init__.py  dependencies.py  models.py
backend/src/data_service/: __init__.py  data_slicer.py  excel_reader.py  exceptions.py
backend/src/db/: __init__.py  models.py  repository.py
backend/src/file_parser/: __init__.py  engine.py  excel_parser.py  pdf_parser.py  word_parser.py
backend/src/indicator_tree/: __init__.py  models.py
backend/src/llm/: __init__.py  client.py  orchestrator.py  prompts.py  tools.py
backend/src/middleware/: __init__.py  logging.py
backend/src/report/: __init__.py  engine.py  pdf_generator.py  word_generator.py
backend/src/state_machine/: __init__.py  (+2 more)
backend/tests/: conftest.py  test_algorithm.py  test_auth.py  test_data_service.py  test_export.py  test_integration_full_flow.py  test_parser_edge_cases.py  test_performance.py  test_state_machine.py  test_task4_end_to_end.py  test_upload.py  test_validator.py  test_visualizer.py
(+49 files in other folders)
